# XmlJsonServiceDemo

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/agents/: coder.agent.md  interface_architect.agent.md  orchestrator.agent.md  planner.agent.md
.github/workflows/: macos.yml  sanitizers.yml  static_check.yml  ubuntu.yml  windows.yml
app/: main.cpp
cmake/: CodeCoverage.cmake  CompileOptions.cmake  Dependencies.cmake
config/: default.json
lib/include/xmljson/: config.hpp  conversion_options.hpp  converter.hpp  error.hpp  http_server.hpp  logging.hpp
lib/src/: config.cpp  converter.cpp  error.cpp  http_server.cpp  json_to_xml.cpp  logging.cpp  xml_to_json.cpp
tests/: test_config.cpp  test_http_handlers.cpp  test_json_to_xml.cpp  test_logging.cpp  test_round_trip.cpp  test_xml_to_json.cpp
tests/fixtures/: attributes.xml  malformed.xml  mixed_content.xml  sample_invoice.json  sample_invoice.xml
tests/integration/: test_http_server.cpp
